--- a/assets/styles/theme.scss
+++ b/assets/styles/theme.scss
@@ -8,7 +8,13 @@ $height: (4 * $unit);
 $black: #000;
 
 header {
+  box-sizing: border-box;
   text-align: center;
+}
+
+form {
+  background-color: $font-color;
+  color: $background-color;
 }
 
 body {
