Changes in gameboard Still undecided on traditional or bootstrap friendly code.

--- a/assets/styles/theme.scss
+++ b/assets/styles/theme.scss
@@ -2,7 +2,7 @@
 
 $background-color: #600;
 $font-color: #ffc20e;
-$unit: 40px;
+$unit: 30px;
 $width: (4 * $unit);
 $height: (4 * $unit);
 $black: #000;
@@ -21,14 +21,14 @@ body {
   background-color: $background-color;
   color: $font-color;
 }
-// 
-// .gameboard {
-//   border: 1px solid $black;
-//   box-sizing: border-box;
-//   height: $height;
-//   text-align: center;
-//   width: $width;
-//  }
+
+.game-board .col-xs-4 {
+  border: 1px solid $black;
+  box-sizing: border-box;
+  height: $height;
+  text-align: center;
+  width: $width;
+ }
 
 // .container .col-xs-4 {
 //   border: 1px solid $black;
