Changed board back   Changed gameboard back to bootstrap friendly code

--- a/assets/styles/theme.scss
+++ b/assets/styles/theme.scss
@@ -22,7 +22,7 @@ body {
   color: $font-color;
 }
 
-.game-board .col-xs-4 {
+.container .col-xs-4 {
   border: 1px solid $black;
   box-sizing: border-box;
   height: $height;
