JS sign in issues fixed sign in forms launch when button is clicked, and the form hides once the user hits submit.

--- a/assets/styles/theme.scss
+++ b/assets/styles/theme.scss
@@ -22,6 +22,10 @@ body {
   color: $font-color;
 }
 
+.row {
+  text-align: center;
+}
+
 .container .col-xs-4 {
   border: 1px solid $black;
   box-sizing: border-box;
